--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -2,11 +2,6 @@
   color: #47eea8;
 }
 
-h1 {
-  line-height: 3rem;
-  text-align: center;
-}
-
 .block-home {
   background: linear-gradient(180deg, #000000 46%, #47eea8 100%);
   height: calc(100vh - 264px);
@@ -23,7 +18,6 @@ h2 {
 .up-block-home {
   position: relative;
   text-align: center;
-  margin-top: 11rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,6 +28,10 @@ h2 {
     line-height: 1.8rem;
     font-size: 16px;
     color: #ffffff50;
+  }
+  & h1 {
+    line-height: 3rem;
+    text-align: center;
   }
 }
 
