--- a/client/src/pages/MusicForm/MusicForm.css
+++ b/client/src/pages/MusicForm/MusicForm.css
@@ -4,4 +4,40 @@
   flex-direction: column;
   align-items: center;
   gap: 4rem;
+  margin-top: 5rem;
+}
+
+.block-jacket {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.block-artist {
+  display: flex;
+  justify-content: space-between;
+}
+.block-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  & button {
+    padding: 0.5rem 1.5rem;
+    border-radius: 1.5rem;
+    font-family: font;
+    border: solid 3px #7befbe;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+  }
+}
+
+.block-submit {
+  display: flex;
+  justify-content: flex-end;
 }
